--- a/static/styles/construction_style.css
+++ b/static/styles/construction_style.css
@@ -12,7 +12,7 @@ body
     align-items: center;
     min-height: 100vh;
     overflow: hidden;
-    background: #182357;
+    background: #1e1f1e;
 }
 .circle
 {
@@ -41,7 +41,7 @@ body
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: #182357;
+    background: #1e1f1e;
 }
 .AnimatedCircle .loader
 {
@@ -49,7 +49,7 @@ body
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    animation: animate 4s linear infinite;
+    animation: animate 5s linear infinite;
 }
 @keyframes animate
 {
@@ -70,7 +70,7 @@ body
     left: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(to top, transparent, rgba(0,255,249,0.4));
+    background: linear-gradient(to top, transparent, rgba(119, 35, 255, 0.87),rgba(0, 255, 42, 0.685),rgba(153, 0, 255, 0.2));
     background-size: 200px 360px;
     background-repeat: no-repeat;
     border-top-left-radius: 200px;
@@ -83,40 +83,43 @@ body
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 10px;
-    height: 10px;
-    background: #00fff9;
+    width: 25px;
+    height: 25px;
+    background: #a200ffd3;
     border-radius: 50%;
     z-index: 10;
-    box-shadow: 0 0 10px #00fff9,
-                0 0 20px #00fff9,
-                0 0 30px #00fff9,
-                0 0 40px #00fff9,
-                0 0 50px #00fff9,
-                0 0 60px #00fff9,
-                0 0 70px #00fff9,
-                0 0 80px #00fff9,
-                0 0 90px #00fff9,
-                0 0 100px #00fff9;
+    box-shadow: 0 0 10px #a200ff,
+                0 0 20px #a200ff,
+                0 0 30px #a200ff,
+                0 0 40px #a200ff,
+                0 0 50px #a200ff,
+                0 0 60px #a200ff,
+                0 0 70px #a200ff,
+                0 0 80px #a200ff,
+                0 0 90px #a200ff,
+                0 0 100px #a200ff,
+                0 0 110px #a200ff,
+                0 0 120px #a200ff,
+                0 0 230px #a200ff;
 }
 .AnimatedCircle .loader span
 {
     position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    background: #182357;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    background: #2f2c2f0c;
     border-radius: 50%;
 }
 .fox
 {
     position: absolute;
-    width: 340px;
-    height: 340px;
-    background: url(./static/images/fox.jpg);
-    border-radius: 50%;
+    width: 380px;
+    height: 380px;
+    background: url(fox.jpg);
+    border-radius: 60%;
     background-size: cover;
-    box-shadow: inset 0 0 20px #03a9f4,
-                      0 0 120px #03a9f4;
+    box-shadow: inset 0 0 20px rgba(153, 0, 255, 0.048),
+                      0 0 120px rgba(153, 0, 255, 0.541);
 }
