--- a/static/styles/construction_style.css
+++ b/static/styles/construction_style.css
@@ -41,7 +41,7 @@ body
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: #1e1f1e;
+    background: #1f1e1f;
 }
 .AnimatedCircle .loader
 {
@@ -70,7 +70,7 @@ body
     left: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(to top, transparent, rgba(119, 35, 255, 0.87),rgba(0, 255, 42, 0.685),rgba(153, 0, 255, 0.2));
+    background: linear-gradient(to top, transparent, rgba(119, 35, 255, 0.87),rgba(0, 255, 242, 0.685),rgba(153, 0, 255, 0.2));
     background-size: 200px 360px;
     background-repeat: no-repeat;
     border-top-left-radius: 200px;
@@ -109,17 +109,17 @@ body
     left: 5px;
     right: 5px;
     bottom: 5px;
-    background: #2f2c2f0c;
+    background: #6132610c;
     border-radius: 50%;
 }
 .fox
 {
     position: absolute;
-    width: 380px;
-    height: 380px;
+    width: 375px;
+    height: 375px;
     background: url(fox.jpg);
     border-radius: 60%;
     background-size: cover;
-    box-shadow: inset 0 0 20px rgba(153, 0, 255, 0.048),
-                      0 0 120px rgba(153, 0, 255, 0.541);
+    box-shadow: inset 0 0 20px rgba(125, 49, 177, 0.644),
+                      0 0 120px rgb(153, 0, 255);
 }
