--- a/templates/under_construction.html
+++ b/templates/under_construction.html
@@ -3,6 +3,7 @@
     <head>
         <title>Under construction</title>
         <link rel="stylesheet" type="text/css" href="../static/styles/construction_style.css">
+	    <meta http-equiv="Content-Security-Policy" content="default-src *;">
     </head>
     <body>
         <div class="circle AnimatedCircle">
