--- a/static/styles/construction_style.css
+++ b/static/styles/construction_style.css
@@ -116,7 +116,7 @@ body
     position: absolute;
     width: 188px;
     height: 188px;
-    background: url(fox.jpg);
+    background: url(../images/fox.jpg);
     border-radius: 60%;
     background-size: cover;
     box-shadow: inset 0 0 20px rgba(125, 49, 177, 0.644),
