--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,21 @@
 	    <meta http-equiv="Content-Security-Policy" content="default-src *;">
     </head>
     <body>
+
+
+ >
+
         <div class="mainWindow">
-            <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="#">Left 2</a></li>
+                    <li><a href="#">Left </a></li>
+                    <li><a class="fox" href="#"></a></li>
+                    <li><a href="#">Right </a></li>
+                    <li><a href="#">Right 2</a></li>
+                </ul>
+            </nav>
+            <!-- <div class="nav">
                 <div class="container">
                 <div class="l2">
                     <a href="#">Left 2<span></span><span></span></a>
@@ -15,10 +28,10 @@
                 <div class="l1">
                     <a href="#">Left<span></span><span></span></a>
                 </div>
-                <!--<a href="#">-->
+            
                 <div class="fox"></div>
                     <span></span><span></span>
-                <!--</a>-->
+                
                 <div class="r1">
                     <a href="#">Right<span></span><span></span></a>
                 </div>
@@ -26,7 +39,7 @@
                     <a href="#">Right 2<span></span><span></span></a>
                 </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
