--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,7 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
+:root {
+  --nav-runner-min-width: 750px;
+  --nav-runner-to-border-offet: 150px;
+  --runner-gradient: linear-gradient(
+    90deg,
+    transparent,
+    rgba(169, 79, 230, 0.644)
+  );
+  --runner-innit-width: 80px;
+  --runner-innit-height: 2px;
+  --runner-start-width: 150px;
+  --runner-end-of-animation-width: 200px;
+}
+
 *,
 *::before,
-*::after {
+*::after,
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,44 +26,110 @@
 
 nav {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  flex-wrap: nowrap;
+  flex-direction: column;
+  margin: 5em auto 0 auto;
+  width: var(--nav-runner-min-width);
   justify-content: center;
   align-items: center;
 }
 
-nav li {
-  border: 1px solid blue;
-  vertical-align: middle;
-  display: inline;
+.runners-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  min-width: calc(var(--nav-runner-min-width) - 100px);
+}
+
+.runners-container.bottom {
+  margin-top: -1em;
+}
+
+.runners-container.top {
+  margin-bottom: -1em;
+}
+
+.runner {
+  width: 1px;
+  height: var(--runner-innit-height);
+  /** hide behind the fox */
+  z-index: -2;
+}
+
+.runner::after {
+  position: absolute;
+  top: 0;
+  left: 45%;
+  content: '';
+  height: var(--runner-innit-height);
+  width: var(--runner-innit-width);
+  background: var(--runner-gradient);
+  display: block;
+  transform: rotate(180deg);
+  animation: animate-left 1s linear infinite;
+  transform-origin: center;
+}
+
+.runner::before {
+  position: absolute;
+  top: 0;
+  left: 45%;
+  content: '';
+  height: 3px;
+  width: var(--runner-innit-width);
+  background: var(--runner-gradient);
+  display: block;
+  animation: animate-right 1s linear infinite;
+  transform-origin: center;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1 1 0px;
+  width: 80%;
 }
 
-nav li a {
+li {
+  flex-basis: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+/** rendering shadow already on page load for smooth shadow animation */
+li::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(125, 49, 177, 0.644);
+  border-radius: 2%;
+  box-shadow: 0 0 5px rgba(126, 49, 177, 0.644),
+    0 0 10px rgba(125, 49, 177, 0.644), 0 0 40px rgba(125, 49, 177, 0.644),
+    0 0 60px rgba(125, 49, 177, 0.644);
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+}
+
+li:hover::after {
+  opacity: 1;
+}
+
+a {
   position: relative;
   display: inline-block;
-  padding: 25px 30px;
-  margin: 30px 0;
   color: #03e9f4;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-decoration: none;
-  overflow: hidden;
-  transition: 1s;
-  letter-spacing: 3px;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
-}
-
-nav li a::before {
-    content: "";
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, rgba(125, 49, 177, 0.644));
-    animation: animate1 1s linear infinite;
+  letter-spacing: 0.125rem;
+  padding: 0.8em;
+  z-index: 2;
 }
 
 body {
@@ -58,6 +140,7 @@ body {
   overflow: hidden;
   background: #333333;
 }
+
 .mainWindow {
   position: relative;
   min-width: 70%;
@@ -66,11 +149,13 @@ body {
   align-items: center;
   background: #13131383;
 }
+
 .bar {
   position: relative;
   justify-content: center;
   align-items: center;
 }
+
 .container {
   width: 100%;
   display: flex;
@@ -78,94 +163,32 @@ body {
   align-items: center;
   flex-direction: row;
 }
-a {
-  position: relative;
-  display: inline-block;
-  padding: 25px 30px;
-  margin: 30px 0;
-  color: #03e9f4;
-  font-size: 20px;
-  text-decoration: none;
-  overflow: hidden;
-  transition: 1s;
-  letter-spacing: 3px;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
-}
-a:hover {
-  background: rgba(125, 49, 177, 0.644);
-  color: #03d8f4;
-  box-shadow: 0 0 5px rgba(125, 49, 177, 0.644),
-    0 0 20px rgba(125, 49, 177, 0.644), 0 0 40px rgba(125, 49, 177, 0.644),
-    0 0 150px rgba(125, 49, 177, 0.644);
-}
-a span {
-  position: absolute;
-  display: block;
-}
-.r1 a span,
-.r2 a span {
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, rgba(125, 49, 177, 0.644));
-  animation: animate1 1s linear infinite;
-}
-.r1 a span:nth-child(1) {
-  top: 0;
-}
-.r2 a span:nth-child(1) {
-  top: 0;
-  animation-delay: 1.25s;
-}
-.r1 a span:nth-child(2) {
-  bottom: 0;
-}
-.r2 a span:nth-child(2) {
-  bottom: 0;
-  animation-delay: 1.25s;
+
+@keyframes animate-left {
+  /** give it a jump start otherwise it is slower then the right one */
+  0% {
+    transform: translateX(calc(var(--runner-innit-width) / -1)) rotate(180deg);
+  }
+  /** increase to required start width, cant be initialized because it may not fit "behind" the fox" */
+  10% {
+    width: var(--runner-start-width);
+  }
+  100% {
+    transform: translateX(calc(var(--nav-runner-min-width) / -2)) rotate(180deg);
+    width: var(--runner-end-of-animation-width);
+  }
 }
 
-@keyframes animate1 {
-  0% {
-    left: -100%;
+@keyframes animate-right {
+  10% {
+    width: var(--runner-start-width);
   }
-  50%,
   100% {
-    left: 100%;
+    transform: translateX(calc(var(--nav-runner-min-width) / 2));
+    width: var(--runner-end-of-animation-width);
   }
-}
-.l1 a span,
-.l2 a span {
-  right: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, rgba(125, 49, 177, 0.644));
-  animation: animate2 1s linear infinite;
-}
-.l1 a span:nth-child(1) {
-  top: 0;
-}
-.l2 a span:nth-child(1) {
-  top: 0;
-  animation-delay: 1.25s;
-}
-.l1 a span:nth-child(2) {
-  bottom: 0;
-}
-.l2 a span:nth-child(2) {
-  bottom: 0;
-  animation-delay: 1.25s;
 }
 
-@keyframes animate2 {
-  0% {
-    right: -100%;
-  }
-  50%,
-  100% {
-    right: 100%;
-  }
-}
 .fox {
   position: center;
   width: 100px;
