--- a/templates/home.html
+++ b/templates/home.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Under construction</title>
-        <link rel="stylesheet" type="text/css" href="../static/styles/main.css">
-	    <meta http-equiv="Content-Security-Policy" content="default-src *;">
-    </head>
-    <body>
+
+<head>
+    <title>Under construction</title>
+    <link rel="stylesheet" type="text/css" href="../static/styles/main.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src *;">
+</head>
+
+<body>
 
 
- >
 
-        <div class="mainWindow">
-            <nav>
-                <ul>
-                    <li><a href="#">Left 2</a></li>
-                    <li><a href="#">Left </a></li>
-                    <li><a class="fox" href="#"></a></li>
-                    <li><a href="#">Right </a></li>
-                    <li><a href="#">Right 2</a></li>
-                </ul>
-            </nav>
-            <!-- <div class="nav">
-                <div class="container">
-                <div class="l2">
-                    <a href="#">Left 2<span></span><span></span></a>
-                </div>
-                <div class="l1">
-                    <a href="#">Left<span></span><span></span></a>
-                </div>
-            
-                <div class="fox"></div>
-                    <span></span><span></span>
-                
-                <div class="r1">
-                    <a href="#">Right<span></span><span></span></a>
-                </div>
-                <div class="r2">
-                    <a href="#">Right 2<span></span><span></span></a>
-                </div>
-                </div>
-            </div> -->
-        </div>
-    </body>
+    <div class="mainWindow">
+
+        <nav>
+
+            <div class="runners-container top">
+                <div class="runner"></div>
+            </div>
+
+            <ul>
+                <li><a href="#">Left 2</a></li>
+                <li><a href="#">Left </a></li>
+                <li><a class="fox" href="#"></a></li>
+                <li><a href="#">Right </a></li>
+                <li><a href="#">Right 2</a></li>
+            </ul>
+
+            <div class="runners-container bottom">
+
+                <div class="runner"></div>
+
+            </div>
+
+        </nav>
+
+    </div>
+</body>
+
 </html>
